kubernetes/apps/seerr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: seerr
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: seerr
  ports:
    - port: 5055
      targetPort: 5055
      protocol: TCP
      name: http
