kubernetes/apps/seerr/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: seerr-ingress
spec:
  entryPoints:
    - websecure
  ingressClassName: traefik-external
  routes:
    - match: Host(`seerr.home.lungoo.de`)
      kind: Rule
      services:
        - name: seerr
          port: 5055
